src/tests/testfiles/variable-declarations/6.txt
Error at 2:7: Variable initialization must have the same type (have int and float)
int arr[3] = {1, 2, 4.0};
    ^
